<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lenovo.restrobill.MainActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"
    android:textSize="24sp"
    android:id="@+id/name"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:layout_below="@id/name"
        android:layout_marginLeft="30dp"
        android:textSize="16sp"
        android:id="@+id/item"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty"
        android:layout_toRightOf="@id/item"
        android:layout_below="@id/name"
        android:layout_marginLeft="90dp"
        android:textSize="16dp"
        android:id="@+id/qty"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_toRightOf="@id/qty"
        android:layout_below="@id/name"
        android:layout_marginLeft="60dp"
        android:textSize="16dp"
        android:id="@+id/price"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chilli"
        android:layout_below="@+id/item"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/chilli"

        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/momos"
        android:layout_below="@+id/chilli"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/momos"

        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shake"
        android:layout_below="@+id/momos"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/shake"

        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coke"
        android:layout_below="@+id/shake"
        android:textSize="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/coke"
        />
  <EditText
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:layout_below="@id/qty"
    android:layout_toRightOf="@id/chilli"
    android:layout_marginLeft="30dp"
    android:id="@+id/Cprice"
    android:layout_marginTop="10dp"
    />
    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Cprice"
        android:layout_toRightOf="@id/momos"
        android:layout_marginLeft="60dp"
        android:id="@+id/Mprice"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Mprice"
        android:layout_toRightOf="@id/chilli"
        android:layout_marginLeft="28dp"
        android:id="@+id/Sprice"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Sprice"
        android:layout_toRightOf="@id/shake"
        android:layout_marginLeft="70dp"
        android:id="@+id/Cokeprice"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_toRightOf="@id/Cprice"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:text="@string/c40"
        android:id="@+id/cpr"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cpr"
        android:layout_toRightOf="@id/Mprice"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/c40"
        android:id="@+id/mpr"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mpr"
        android:layout_toRightOf="@id/Sprice"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/s40"
        android:id="@+id/spr"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spr"
        android:layout_toRightOf="@id/Cprice"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/c40"
        android:id="@+id/cokepr"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/order"
        android:id="@+id/btn"/>



</RelativeLayout>
